初步可用版本

--- a/app/templates/plan/create.html
+++ b/app/templates/plan/create.html
@@ -4,14 +4,53 @@
 
 
     <div class="container">
-        <form role="form">
-          <div class="form-group">
-            <label >名称</label>
-            <input type="text" class="form-control" id="name" placeholder="请输入名称">
-          </div>
 
-          <button type="submit" class="btn btn-default">提交</button>
-        </form>
+              <form class="form-inline" role="form" action="/plan/edit" method="post">
+        {{ form.csrf_token }}
+        <div class="form-group" hidden>
+          <label class="" for="name">id:</label>
+          <input type="text" class="form-control" id="id" name="id" {% if form.id.data %} value="{{form.id.data}}" {%endif%} style="width:150px">
+        </div>
+
+        <div class="form-group">
+          <label class="" for="name">名称:</label>
+          <input type="text" class="form-control" id="name" name="name" {% if form.name.data %} value="{{form.name.data}}" {%endif%} style="width:150px">
+        </div>
+
+        <div class="form-group">
+          <label class="" for="price_top">区间上限:</label>
+          <input type="text" class="form-control" id="price_top" name="price_top" {% if form.price_top.data %} value={{form.price_top.data}} {% endif%}>
+        </div>
+        <div class="form-group">
+          <label class="" for="price_bottom">区间下限:</label>
+          <input type="text" class="form-control" id="price_bottom" name="price_bottom" {% if form.price_bottom.data %} value="{{form.price_bottom.data}}"{% endif%}>
+        </div>
+
+        <div class="form-group">
+          <label class="" for="start_price">起始价格:</label>
+          <input type="text" class="form-control" id="start_price" name="start_price" {% if form.start_price.data %} value="{{form.start_price.data}}" {% endif%}>
+        </div>
+
+
+        <div class="form-group" >
+          <label for="initial_quotas" class="control-label">最初配额:</label>
+          <input type="text" class="form-control"  width="10" id="initial_quotas" name="initial_quotas"  {% if form.initial_quotas.data %} value="{{form.initial_quotas.data}}" {% endif%}>
+        </div>
+
+        <div class="form-group">
+          <label class="control-label" for="increase_rate">仓位递增:</label>
+          <input type="text" class=" input-mini form-control" id="increase_rate" name="increase_rate"{% if form.increase_rate.data %} value="{{form.increase_rate.data}}"{% endif%}>
+        </div>
+        <div class="form-group">
+          <label class="control-label" for="reduce_rate">价格递减:</label>
+          <input type="text" class=" input-mini form-control" id="reduce_rate" name="reduce_rate" {% if form.reduce_rate.data %}value="{{form.reduce_rate.data}}"{% endif%}>
+        </div>
+
+        <button type="submit" class="btn btn-default">提交</button>
+<!--        <button type="submit" class="btn btn-default">删除</button>-->
+      </form>
+
+
     </div>
 
 {% endblock %}
