--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -20,12 +20,13 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('plan.edit') }}">Add</a>
+        <a class="nav-link" href="{{ url_for('plan.ergodic') }}">遍历策略</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('plan.lists', _id=0) }}">List</a>
+        <a class="nav-link" href="{{ url_for('plan.info', _id=0) }}">策略</a>
       </li>
+
 
     </ul>
     {% if current_user and current_user.is_authenticated %}
@@ -35,15 +36,16 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.logout') }}">
-          <i class="fa fa-sign-out"></i>
+          <i class="fa fa-sign-out">登出</i>
         </a>
       </li>
     </ul>
     {% elif form %}
     <form class="form-inline" id="loginForm" method="POST" action="/" role="login">
-      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+
       <div class="input-group mb-2 mr-sm-2">
-        {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }} {{ form.password(placeholder="Password",
+        {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }}
+        {{ form.password(placeholder="Password",
         class_="form-control mr-sm-1 my-auto") }}
         <button class="btn btn-light btn-primary m-auto" type="submit">Login</button>
       </div>
